java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testIncorrectType57991.pass
/*
 * AbstractClass.java
 *
 * Created on March 12, 2005, 7:22 PM
 */

package org.netbeans.test.java.hints;

import java.io.IOException;
import javax.swing.text.BadLocationException;

/**
 *
 * @author lahvac
 */
public abstract class IncorrectType57991 {

    private String foo;
    
    /** Creates a new instance of AbstractClass */
    public IncorrectType57991() {
    }
    
    public void test() {
        this.foo = "bar";
    }
    
}
